--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,13 +6,13 @@
     top: 0; 
     z-index: -1; 
     overflow: hidden;
-    background-color: rgba(255,255,255,0);
 }
 
 #element{
+    color: rgba(255,255,255,0)
     margin: 0 auto;
     font-size: 500px;
     padding-left: 10%;
-    background-color: rgba(255,255,255,0);
+    background-color: (255,255,255,0);
     font-family: 'Courier New', Courier, monospace;
 }
