--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
 }
 
 #element{
-    color: rgba(255,255,255,0)
+    color: rgba(255,255,255,0);
     margin: 0 auto;
     font-size: 500px;
     padding-left: 10%;
